--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF0F5"
-    >
+    android:background="@drawable/fundalflori1">
 
     <TextView
         android:id="@+id/tv_title"
@@ -12,7 +11,8 @@
         android:layout_height="wrap_content"
         android:text="@string/login"
         android:textSize="24sp"
-        android:textColor="#D81B60"
+        android:textColor="
+#D81B60"
         app:layout_constraintVertical_bias="0.1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,12 +48,12 @@
             android:backgroundTint="#F48FB1"
             android:textColorHint="#F8BBD0">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tiet_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:inputType="textPassword"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/tiet_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
@@ -83,6 +83,5 @@
             android:backgroundTint="#EC407A"
             android:textColor="#FFFFFF"/>
     </LinearLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
