--- a/app/src/main/res/layout/fragment_register_step_1.xml
+++ b/app/src/main/res/layout/fragment_register_step_1.xml
@@ -70,7 +70,8 @@
             android:id="@+id/btn_go_to_register_step_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EC407A"
+            android:background="@drawable/pink_button"
+            app:backgroundTint="@null"
             android:textColor="#FFFFFF"
             android:text="@string/next" />
     </LinearLayout>
