--- a/app/src/main/res/layout/fragment_register_step_2.xml
+++ b/app/src/main/res/layout/fragment_register_step_2.xml
@@ -65,7 +65,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/do_register"
-        android:backgroundTint="#EC407A"
+        android:background="@drawable/pink_button"
+        app:backgroundTint="@null"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
