--- a/app/src/main/res/layout/fragment_register_step_2.xml
+++ b/app/src/main/res/layout/fragment_register_step_2.xml
@@ -1,77 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/fundalflori4"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/fundalflori4"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/tv_title_register2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/register_step_2"
-        android:textSize="24sp"
-        android:textColor="#D81B60"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/tv_title_register2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Complete Registration"
+            android:textSize="24sp"
+            android:textColor="#D81B60"
+            app:layout_constraintVertical_bias="0.1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/LinearLayoutRegister2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/default_space"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title_register2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.15">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/FirstName"
-            android:layout_width="match_parent"
+            android:id="@+id/LinearLayoutRegister2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/first_name"
-            android:backgroundTint="#F48FB1"
-            android:textColorHint="#F8BBD0"
-            android:inputType="textPersonName">
+            android:orientation="vertical"
+            android:padding="@dimen/default_space"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title_register2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.15">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tell us a bit about yourself:"
+                android:textSize="14sp"
+                android:textColor="#D81B60"
+                android:layout_marginBottom="16dp"
+                android:layout_gravity="center_horizontal" />
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/FirstName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/first_name"
+                android:backgroundTint="#F48FB1"
+                android:textColorHint="#F8BBD0"
+                android:inputType="textPersonName">
         </com.google.android.material.textfield.TextInputEditText>
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/LastName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/last_name"
-            android:backgroundTint="#F48FB1"
-            android:textColorHint="#F8BBD0"
-            android:inputType="textPersonName">
+                android:id="@+id/LastName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/last_name"
+                android:backgroundTint="#F48FB1"
+                android:textColorHint="#F8BBD0"
+                android:inputType="textPersonName">
         </com.google.android.material.textfield.TextInputEditText>
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/Age"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/age"
-            android:backgroundTint="#F48FB1"
-            android:textColorHint="#F8BBD0"
-            android:inputType="number">
+                android:id="@+id/Age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/age"
+                android:backgroundTint="#F48FB1"
+                android:textColorHint="#F8BBD0"
+                android:inputType="number">
         </com.google.android.material.textfield.TextInputEditText>
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_go_to_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/do_register"
-        android:background="@drawable/pink_button"
-        app:backgroundTint="@null"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LinearLayoutRegister2">
+            android:id="@+id/btn_go_to_profile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create Account"
+            android:background="@drawable/pink_button"
+            app:backgroundTint="@null"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/LinearLayoutRegister2">
     </Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
