--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -81,9 +81,9 @@
             android:layout_height="wrap_content"
             android:id="@+id/btn_go_to_register"
             android:text="@string/go_to_register"
-            android:background="@drawable/pink_button"
             app:backgroundTint="@null"
-            android:textColor="#FFFFFF"/>
+                android:background="@drawable/button_selector"
+                android:textColor="@color/button_text_color"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
