--- a/app/src/main/res/layout/fragment_register_step_2.xml
+++ b/app/src/main/res/layout/fragment_register_step_2.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/fundalflori4"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:background="@drawable/fundalflori4">
 
     <TextView
             android:id="@+id/tv_title_register2"
@@ -27,7 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_title_register2"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/btn_go_to_profile"
             app:layout_constraintVertical_bias="0.15">
 
         <TextView
@@ -75,13 +75,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create Account"
-            android:background="@drawable/pink_button"
             app:backgroundTint="@null"
-            android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/button_selector"
+            android:textColor="@color/button_text_color"
+            app:layout_constraintBottom_toTopOf="@+id/btn_logout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/LinearLayoutRegister2">
+            app:layout_constraintTop_toBottomOf="@+id/LinearLayoutRegister2"
+            android:layout_marginBottom="16dp">
     </Button>
+
+    <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="Back to Login"
+            android:background="@drawable/button_selector"
+            android:textColor="@color/button_text_color"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            android:layout_margin="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@null" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
