--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="button_primary_start">#F06299</color>
+    <color name="button_primary_center">#EC407A</color>
+    <color name="button_primary_end">#C2185B</color>
+
+    <color name="button_pressed_start">#FFCDD2</color>
+    <color name="button_pressed_center">#FCE4EC</color>
+    <color name="button_pressed_end">#FBE9E7</color>
+
+    <color name="button_border">#AD1457</color>
+    <color name="button_border_pressed">#424242</color>
+
+    <color name="button_selected">#F06292</color>
 </resources>
