--- a/app/src/main/res/navigation/navigation_profile.xml
+++ b/app/src/main/res/navigation/navigation_profile.xml
@@ -1,79 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/navigation_profile"
-        app:startDestination="@id/dashboardFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_profile"
+    app:startDestination="@id/dashboardFragment">
 
     <fragment
-            android:id="@+id/dashboardFragment"
-            android:name="com.example.nutrisense.DashboardFragment"
-            android:label="DashboardFragment"
-            tools:layout="@layout/fragment_dashboard">
+        android:id="@+id/dashboardFragment"
+        android:name="com.example.nutrisense.DashboardFragment"
+        android:label="DashboardFragment"
+        tools:layout="@layout/fragment_dashboard">
         <argument
-                android:name="email"
-                app:argType="string" />
+            android:name="email"
+            app:argType="string" />
         <action
-                android:id="@+id/action_dashboardFragment_to_searchHistoryFragment"
-                app:destination="@id/searchHistoryFragment" />
+            android:id="@+id/action_dashboardFragment_to_searchHistoryFragment"
+            app:destination="@id/searchHistoryFragment" />
         <action
-                android:id="@+id/action_dashboardFragment_to_calculateNutritionFragment"
-                app:destination="@id/calculateNutritionFragment" />
+            android:id="@+id/action_dashboardFragment_to_calculateNutritionFragment"
+            app:destination="@id/calculateNutritionFragment" />
         <action
-                android:id="@+id/action_dashboardFragment_to_settingsFragment"
-                app:destination="@id/settingsFragment" />
+            android:id="@+id/action_dashboardFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
         <action
-                android:id="@+id/action_dashboardFragment_to_profileFragment"
-                app:destination="@id/profileFragment" />
+            android:id="@+id/action_dashboardFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_recipeSearchFragment"
+            app:destination="@id/recipeSearchFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_recipeHistoryFragment"
+            app:destination="@id/recipeHistoryFragment" />
     </fragment>
 
     <fragment
-            android:id="@+id/profileFragment"
-            android:name="com.example.nutrisense.ProfileFragment"
-            android:label="ProfileFragment"
-            tools:layout="@layout/fragment_profile">
+        android:id="@+id/profileFragment"
+        android:name="com.example.nutrisense.ProfileFragment"
+        android:label="ProfileFragment"
+        tools:layout="@layout/fragment_profile">
         <argument
-                android:name="email"
-                app:argType="string" />
+            android:name="email"
+            app:argType="string" />
         <action
-                android:id="@+id/action_profileFragment_to_settingsFragment"
-                app:destination="@id/settingsFragment" />
+            android:id="@+id/action_profileFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
         <action
-                android:id="@+id/action_profileFragment_to_calculateNutritionFragment"
-                app:destination="@id/calculateNutritionFragment" />
+            android:id="@+id/action_profileFragment_to_calculateNutritionFragment"
+            app:destination="@id/calculateNutritionFragment" />
         <action
-                android:id="@+id/action_profileFragment_to_dashboardFragment"
-                app:destination="@id/dashboardFragment" />
+            android:id="@+id/action_profileFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
     </fragment>
 
     <fragment
-            android:id="@+id/settingsFragment"
-            android:name="com.example.nutrisense.SettingsFragment"
-            android:label="SettingsFragment"
-            tools:layout="@layout/fragment_settings">
+        android:id="@+id/settingsFragment"
+        android:name="com.example.nutrisense.SettingsFragment"
+        android:label="SettingsFragment"
+        tools:layout="@layout/fragment_settings">
         <action
-                android:id="@+id/action_settingsFragment_to_dashboardFragment"
-                app:destination="@id/dashboardFragment" />
+            android:id="@+id/action_settingsFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
     </fragment>
 
     <fragment
-            android:id="@+id/calculateNutritionFragment"
-            android:name="com.example.nutrisense.CalculateNutritionFragment"
-            android:label="CalculateNutritionFragment"
-            tools:layout="@layout/fragment_calculate_nutrition">
+        android:id="@+id/calculateNutritionFragment"
+        android:name="com.example.nutrisense.CalculateNutritionFragment"
+        android:label="CalculateNutritionFragment"
+        tools:layout="@layout/fragment_calculate_nutrition">
         <action
-                android:id="@+id/action_calculateNutritionFragment_to_dashboardFragment"
-                app:destination="@id/dashboardFragment" />
+            android:id="@+id/action_calculateNutritionFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
     </fragment>
 
     <fragment
-            android:id="@+id/searchHistoryFragment"
-            android:name="com.example.nutrisense.SearchHistoryFragment"
-            android:label="SearchHistoryFragment"
-            tools:layout="@layout/fragment_search_history">
+        android:id="@+id/searchHistoryFragment"
+        android:name="com.example.nutrisense.SearchHistoryFragment"
+        android:label="SearchHistoryFragment"
+        tools:layout="@layout/fragment_search_history">
         <action
-                android:id="@+id/action_searchHistoryFragment_to_dashboardFragment"
-                app:destination="@id/dashboardFragment" />
+            android:id="@+id/action_searchHistoryFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/recipeSearchFragment"
+        android:name="com.example.nutrisense.RecipeSearchFragment"
+        android:label="RecipeSearchFragment"
+        tools:layout="@layout/fragment_recipe_search">
+        <action
+            android:id="@+id/action_recipeSearchFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/recipeHistoryFragment"
+        android:name="com.example.nutrisense.RecipeHistoryFragment"
+        android:label="RecipeHistoryFragment"
+        tools:layout="@layout/fragment_recipe_history">
+        <action
+            android:id="@+id/action_recipeHistoryFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment" />
     </fragment>
 
 </navigation>
